--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
 				<a href="https://www.instagram.com/greg_lafever">source</a>
 
 			</figure>
+			
+			<figure>
+
+				<span>9</span>
+
+				<img src="images/phoenix_suns_logo_alternate_20019950.png">
+
+				<a href="https://www.sportslogos.net/logos/view/hleswchlwpdm1c2obt2focsdy/Phoenix_Suns/2001/Alternate_Logo">source</a>
+
+			</figure>
 
 		</section>
 
