--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>ny images™ #2</title>
+	<title>ny images™ #3</title>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 
@@ -105,16 +105,70 @@
 				<a href="https://www.instagram.com/greg_lafever">source</a>
 
 			</figure>
-			
+
 			<figure>
 
-				<span>9</span>
+				<span>10</span>
 
 				<img src="images/phoenix_suns_logo_alternate_20019950.png">
 
 				<a href="https://www.sportslogos.net/logos/view/hleswchlwpdm1c2obt2focsdy/Phoenix_Suns/2001/Alternate_Logo">source</a>
 
 			</figure>
+
+			<!---------->
+
+			<figure>
+
+				<span>11</span>
+
+				<img src="images/IMG_8402.jpg">
+
+				<a href="https://www.instagram.com/eyeneeditall">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>12</span>
+
+				<img src="images/IMG_8403.jpg">
+
+				<a href="https://instagram.com/venedaacarter">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>13</span>
+
+				<img src="images/IMG_8406.jpg">
+
+				<a href="https://www.instagram.com/erl__________">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>14</span>
+
+				<img src="images/IMG_8409.jpg">
+
+				<a href="https://www.instagram.com/newyorkdelly">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>15</span>
+
+				<img src="images/IMG_8C4A646FFDD7-1.jpeg">
+
+				<a href="https://www.instagram.com/newyorkdelly">source</a>
+
+			</figure>
+
+
 
 		</section>
 
