--- a/index.html
+++ b/index.html
@@ -178,6 +178,240 @@
 
 			</figure>
 
+			<!------->
+
+			<figure>
+
+				<span>16</span>
+
+				<img src="images/nyimages.png">
+
+				<a href="https://www.instagram.com/notreyork">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>16</span>
+
+				<img src="images/nyimages.png">
+
+				<a href="https://www.instagram.com/notreyork">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>5</span>
+
+				<img src="images/IMG_8377.jpg">
+
+			</figure>
+
+			<figure>
+
+				<span>6</span>
+
+				<img src="images/IMG_8337.jpg">
+
+				<a href="https://www.instagram.com/qui.yasuka">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>7</span>
+
+				<img src="images/IMG_8334.jpg">
+
+				<a href="https://www.instagram.com/qui.yasuka">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>8</span>
+
+				<img src="images/IMG_8384.jpg">
+
+				<a href="https://instagram.com/notreyork">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>9</span>
+
+				<img src="images/IMG_8396.jpg">
+
+				<a href="https://www.instagram.com/greg_lafever">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>10</span>
+
+				<img src="images/phoenix_suns_logo_alternate_20019950.png">
+
+				<a href="https://www.sportslogos.net/logos/view/hleswchlwpdm1c2obt2focsdy/Phoenix_Suns/2001/Alternate_Logo">source</a>
+
+			</figure>
+
+			<!---------->
+
+			<figure>
+
+				<span>12</span>
+
+				<img src="images/IMG_8446.jpg">
+
+				<a href="https://www.instagram.com/delroy.edwards">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>13</span>
+
+				<img src="images/IMG_8452.jpg">
+
+				<a href="https://instagram.com/pablojomaron">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>13</span>
+
+				<img src="images/IMG_8458.jpg">
+
+				<a href="https://www.instagram.com/za.chary">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>14</span>
+
+				<img src="images/IMG_8470.jpg">
+
+				<a href="https://www.instagram.com/officialnocta">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>15</span>
+
+				<img src="images/IMG_8491.jpg">
+
+				<a href="https://www.instagram.com/denimtears">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>16</span>
+
+				<img src="images/IMG_8514.jpg">
+
+			</figure>
+
+			<figure>
+
+				<span>5</span>
+
+				<img src="images/IMG_8523.jpg">
+				<a href="https://www.instagram.com/liammacrae">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>6</span>
+
+				<img src="images/IMG_8524.jpg">
+
+				<a href="https://www.instagram.com/hamishkmartin">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>7</span>
+
+				<img src="images/IMG_8529.jpg">
+
+				<a href="https://www.instagram.com/nbacourtsidevintage">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>8</span>
+
+				<img src="images/IMG_8550.jpg">
+
+				<a href="https://instagram.com/bendorado">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>9</span>
+
+				<img src="images/IMG_8551.jpg">
+
+			</figure>
+
+			<figure>
+
+				<span>11</span>
+
+				<img src="images/IMG_8552.jpg">
+
+				<a href="https://www.instagram.com/canadianarmy">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>12</span>
+
+				<img src="images/IMG_8575.JPG">
+
+			</figure>
+
+			<figure>
+
+				<span>13</span>
+
+				<img src="images/IMG_8576.jpg">
+
+				<a href="https://www.instagram.com/steelmcadam">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>13</span>
+
+				<img src="images/IMG_8576.jpg">
+
+				<a href="https://www.instagram.com/seiya_do_corre">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>14</span>
+
+				<img src="images/IMG_8583.jpg">
+
+				<a href="https://www.instagram.com/palaceskateboards">source</a>
+
+			</figure>
 
 
 		</section>
