--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
 				<span>29</span>
 
-				<img src="images/IMG_8575.jpg">
+				<img src="images/IMG_8575.JPG">
 
 				<a href="https://www.instagram.com/steelmcadam">source</a>
 
@@ -337,7 +337,7 @@
 		</div>
 
 		<div class="copyright">
-			<a href="www.notreyork.com">www.notreyork.com</a>
+			<a href="www.ny-images.com">www.ny-images.com</a>
 		</div>
 
 	</footer>
