--- a/index.html
+++ b/index.html
@@ -377,58 +377,55 @@
 
 			<figure>
 
-				<span>29</span>
+				<span>38</span>
 
-				<img src="images/IMG_8575.JPG">
-
-				<a href="https://www.instagram.com/steelmcadam">source</a>
+				<img src="images/IMG_8348.jpeg">
 
 			</figure>
 
 			<figure>
 
-				<span>30</span>
+				<span>39</span>
 
-				<img src="images/IMG_8576.jpg">
+				<img src="images/IMG_8390.jpeg">
 
-				<a href="https://www.instagram.com/seiya_do_corre">source</a>
-
-			</figure>
-
-			<figure>
-
-				<span>31</span>
-
-				<img src="images/IMG_8583.jpg">
-
-				<a href="https://www.instagram.com/palaceskateboards">source</a>
+				<a href="https://www.instagram.com/ggits">source</a>
 
 			</figure>
 
 			<figure>
 
-				<span>23</span>
+				<span>40</span>
 
-				<img src="images/IMG_8523.jpg">
-				<a href="https://www.instagram.com/liammacrae">source</a>
+				<img src="images/IMG_8454.jpeg">
 
-			</figure>
-
-			<figure>
-
-				<span>24</span>
-
-				<img src="images/IMG_8524.jpg">
-
-				<a href="https://www.instagram.com/hamishkmartin">source</a>
+				<a href="https://www.instagram.com/tremaineemory">source</a>
 
 			</figure>
 
 			<figure>
 
-				<span>25</span>
+				<span>41</span>
 
-				<img src="images/IMG_8529.jpg">
+				<img src="images/IMG_8585.jpeg">
+
+			</figure>
+
+			<figure>
+
+				<span>42</span>
+
+				<img src="images/IMG_8591.jpeg">
+
+				<a href="https://www.instagram.com/ggits">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>43</span>
+
+				<img src="images/IMG_8604.jpeg">
 
 				<a href="https://www.instagram.com/nbacourtsidevintage">source</a>
 
@@ -436,59 +433,56 @@
 
 			<figure>
 
-				<span>26</span>
+				<span>44</span>
 
-				<img src="images/IMG_8550.jpg">
+				<img src="images/IMG_8606.jpeg">
 
-				<a href="https://instagram.com/bendorado">source</a>
-
-			</figure>
-
-			<figure>
-
-				<span>27</span>
-
-				<img src="images/IMG_8551.jpg">
+				<a href="https://instagram.com/adidasbasketball">source</a>
 
 			</figure>
 
 			<figure>
 
-				<span>28</span>
+				<span>45</span>
 
-				<img src="images/IMG_8552.jpg">
+				<img src="images/IMG_8609.jpeg">
 
-				<a href="https://www.instagram.com/canadianarmy">source</a>
-
-			</figure>
-
-			<figure>
-
-				<span>29</span>
-
-				<img src="images/IMG_8575.JPG">
-
-				<a href="https://www.instagram.com/steelmcadam">source</a>
+				<a href="https://instagram.com/adidasbasketball">source</a>
 
 			</figure>
 
 			<figure>
 
-				<span>30</span>
+				<span>46</span>
 
-				<img src="images/IMG_8576.jpg">
-
-				<a href="https://www.instagram.com/seiya_do_corre">source</a>
+				<img src="images/IMG_8714.jpeg">
 
 			</figure>
 
 			<figure>
 
-				<span>31</span>
+				<span>47</span>
 
-				<img src="images/IMG_8583.jpg">
+				<img src="images/IMG_8730.jpeg">
 
-				<a href="https://www.instagram.com/palaceskateboards">source</a>
+				<a href="https://www.instagram.com/denimtears">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>48</span>
+
+				<img src="images/IMG_8364.jpeg">
+
+
+			</figure>
+
+			<figure>
+
+				<span>49</span>
+
+				<img src="images/IMG_8327.JPG">
 
 			</figure>
 
