--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 
 				<span>36</span>
 
-				<img src="images/IMG_8356.jpeg">
+				<img src="images/IMG_8356.JPG">
 
 				<a href="https://www.instagram.com/denimtears">source</a>
 
