--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 		<img class="overlay-img" src="">
 	</div>
 
+	<header>
+		
+		<div>
+			<strong>ny images™ #3</strong>
+		</div>
+
+	</header>
+
 	<main>
 
 		<section>
@@ -226,6 +234,8 @@
 
 			<figure>
 
+				<!------- SWITCH THIS ------->
+
 				<span>22</span>
 
 				<img src="images/IMG_8491.jpg">
@@ -263,6 +273,8 @@
 
 			<figure>
 
+				<!------- SWITCH THIS ------->
+
 				<span>26</span>
 
 				<img src="images/IMG_8529.jpg">
@@ -292,6 +304,8 @@
 			</figure>
 
 			<figure>
+
+				<!------- SWITCH THIS ------->
 
 				<span>29</span>
 
@@ -343,11 +357,13 @@
 
 				<span>34</span>
 
-				<img src="images/original_17862e4257786516147099fab98bba5f.png">
+				<img src="images/IMG_8348.jpeg">
 
 			</figure>
 
 			<figure>
+
+				<!------- SWITCH THIS ------->
 
 				<span>35</span>
 
@@ -367,6 +383,8 @@
 
 			<figure>
 
+				<!------- MAYBE SWITCH THIS ------->
+
 				<span>37</span>
 
 				<img src="images/IMG_8228.jpeg">
@@ -377,7 +395,7 @@
 
 				<span>38</span>
 
-				<img src="images/IMG_8348.jpeg">
+				<img src="images/original_17862e4257786516147099fab98bba5f.png">
 
 			</figure>
 
@@ -449,6 +467,8 @@
 
 			<figure>
 
+				<!------- SWITCH THIS ------->
+
 				<span>46</span>
 
 				<img src="images/IMG_8609.jpeg">
@@ -498,12 +518,6 @@
 
 	<footer>
 
-		<div>
-
-			<strong>ny images™ #3</strong> (April 2023)
-
-		</div>
-
 		<div class="copyright">
 			<a href="www.ny-images.com">www.ny-images.com</a>
 		</div>
@@ -520,7 +534,7 @@
 	    $(".overlay-content").show();
 	});
 
-	$(".overlay, .overlay-img").click(function(){
+	$(".overlay, .overlay-content").click(function(){
 	    $(".overlay-img").attr("src", "");
 	    $(".overlay").hide();
 	    $(".overlay-content").hide();
