--- a/index.html
+++ b/index.html
@@ -15,14 +15,6 @@
 		<img class="overlay-img" src="">
 	</div>
 
-	<header>
-		
-		<div>
-			<strong>ny images™ #3</strong>
-		</div>
-
-	</header>
-
 	<main>
 
 		<section>
@@ -234,13 +226,9 @@
 
 			<figure>
 
-				<!------- SWITCH THIS ------->
-
 				<span>22</span>
 
-				<img src="images/IMG_8491.jpg">
-
-				<a href="https://www.instagram.com/denimtears">source</a>
+				<img src="images/IMG_8894.jpeg">
 
 			</figure>
 
@@ -273,13 +261,11 @@
 
 			<figure>
 
-				<!------- SWITCH THIS ------->
-
 				<span>26</span>
 
-				<img src="images/IMG_8529.jpg">
+				<img src="images/IMG_8859.JPG">
 
-				<a href="https://www.instagram.com/nbacourtsidevintage">source</a>
+				<a href="https://www.instagram.com/_jahali">source</a>
 
 			</figure>
 
@@ -305,13 +291,11 @@
 
 			<figure>
 
-				<!------- SWITCH THIS ------->
-
 				<span>29</span>
 
-				<img src="images/IMG_8552.jpg">
+				<img src="images/IMG_8871.jpeg">
 
-				<a href="https://www.instagram.com/canadianarmy">source</a>
+				<a href="https://www.instagram.com/jaylin__kim">source</a>
 
 			</figure>
 
@@ -363,11 +347,9 @@
 
 			<figure>
 
-				<!------- SWITCH THIS ------->
-
 				<span>35</span>
 
-				<img src="images/6419.gif">
+				<img src="images/IMG_8435.jpeg">
 
 			</figure>
 
@@ -383,11 +365,11 @@
 
 			<figure>
 
-				<!------- MAYBE SWITCH THIS ------->
-
 				<span>37</span>
 
-				<img src="images/IMG_8228.jpeg">
+				<img src="images/IMG_8426.jpeg">
+
+				<a href="https://www.instagram.com/23bc__">source</a>
 
 			</figure>
 
@@ -467,11 +449,9 @@
 
 			<figure>
 
-				<!------- SWITCH THIS ------->
-
 				<span>46</span>
 
-				<img src="images/IMG_8609.jpeg">
+				<img src="images/illinois_state_redbirds_logo_primary_1966_sportslogosnet-4757.png">
 
 				<a href="https://instagram.com/adidasbasketball">source</a>
 
@@ -519,6 +499,8 @@
 	<footer>
 
 		<div class="copyright">
+			<strong>ny images™ #3</strong>
+			<br>
 			<a href="www.ny-images.com">www.ny-images.com</a>
 		</div>
 
