--- a/index.html
+++ b/index.html
@@ -190,9 +190,7 @@
 
 				<span>18</span>
 
-				<img src="images/IMG_8446.jpg">
-
-				<a href="https://www.instagram.com/delroy.edwards">source</a>
+				<img src="images/IMG_8553.jpeg">
 
 			</figure>
 
