--- a/index.html
+++ b/index.html
@@ -130,10 +130,8 @@
 
 				<span>12</span>
 
-				<img src="images/IMG_8402.jpg">
-
-				<a href="https://www.instagram.com/eyeneeditall">source</a>
-
+				<img src="images/IMG_8887.jpeg">
+				
 			</figure>
 
 			<figure>
