--- a/index.html
+++ b/index.html
@@ -497,7 +497,10 @@
 		<div class="copyright">
 			<strong>ny images™ #3</strong>
 			<br>
-			<a href="www.ny-images.com">www.ny-images.com</a>
+			visit <a href="https://notreyork.com">www.notreyork.com</a> to subscribe
+			<br>
+			<br>
+			<a href="https://ny-images.com" target="_blank">view archive</a>
 		</div>
 
 	</footer>
