--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 
 				<span>1</span>
 
+				<img src="images/IMG_8337.jpg">
+
+				<a href="https://www.instagram.com/qui.yasuka">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>2</span>
+
 				<img src="images/IMG_4933.JPG">
 
 				<a href="https://instagram.com/notreyork">source</a>
@@ -60,17 +70,7 @@
 
 			<figure>
 
-				<span>7</span>
-
-				<img src="images/IMG_8337.jpg">
-
-				<a href="https://www.instagram.com/qui.yasuka">source</a>
-
-			</figure>
-
-			<figure>
-
-				<span>8</span>
+				<span>6</span>
 
 				<img src="images/IMG_8334.jpg">
 
@@ -80,7 +80,7 @@
 
 			<figure>
 
-				<span>9</span>
+				<span>7</span>
 
 				<img src="images/IMG_8384.jpg">
 
@@ -90,7 +90,7 @@
 
 			<figure>
 
-				<span>10</span>
+				<span>8</span>
 
 				<img src="images/IMG_5133.JPG">
 
@@ -100,7 +100,7 @@
 
 			<figure>
 
-				<span>11</span>
+				<span>9</span>
 
 				<img src="images/phoenix_suns_logo_alternate_20019950.png">
 
@@ -110,7 +110,7 @@
 
 			<figure>
 
-				<span>13</span>
+				<span>10</span>
 
 				<img src="images/IMG_8403.jpg">
 
@@ -120,7 +120,7 @@
 
 			<figure>
 
-				<span>14</span>
+				<span>11</span>
 
 				<img src="images/IMG_8406.jpg">
 
@@ -130,7 +130,7 @@
 
 			<figure>
 
-				<span>15</span>
+				<span>12</span>
 
 				<img src="images/IMG_8409.jpg">
 
@@ -140,7 +140,7 @@
 
 			<figure>
 
-				<span>16</span>
+				<span>13</span>
 
 				<img src="images/IMG_8C4A646FFDD7-1.jpeg">
 
@@ -150,7 +150,7 @@
 
 			<figure>
 
-				<span>19</span>
+				<span>14</span>
 
 				<img src="images/IMG_8452.jpg">
 
@@ -160,7 +160,7 @@
 
 			<figure>
 
-				<span>20</span>
+				<span>15</span>
 
 				<img src="images/IMG_2022.jpeg">
 
@@ -168,7 +168,7 @@
 
 			<figure>
 
-				<span>21</span>
+				<span>16</span>
 
 				<img src="images/IMG_8470.jpg">
 
@@ -178,7 +178,7 @@
 
 			<figure>
 
-				<span>26</span>
+				<span>17</span>
 
 				<img src="images/IMG_8859.JPG">
 
@@ -188,7 +188,7 @@
 
 			<figure>
 
-				<span>27</span>
+				<span>18</span>
 
 				<img src="images/IMG_8550.jpg">
 
@@ -198,7 +198,7 @@
 
 			<figure>
 
-				<span>28</span>
+				<span>19</span>
 
 				<img src="images/E290E666-526C-48AF-830B-C8F7D1A3C213.jpg">
 
@@ -208,27 +208,7 @@
 
 			<figure>
 
-				<span>29</span>
-
-				<img src="images/IMG_8871.jpeg">
-
-				<a href="https://www.instagram.com/jaylin__kim">source</a>
-
-			</figure>
-
-			<figure>
-
-				<span>30</span>
-
-				<img src="images/IMG_8575.JPG">
-
-				<a href="https://www.instagram.com/steelmcadam">source</a>
-
-			</figure>
-
-			<figure>
-
-				<span>31</span>
+				<span>20</span>
 
 				<img src="images/IMG_8576.jpg">
 
@@ -238,17 +218,7 @@
 
 			<figure>
 
-				<span>32</span>
-
-				<img src="images/IMG_8583.jpg">
-
-				<a href="https://www.instagram.com/palaceskateboards">source</a>
-
-			</figure>
-
-			<figure>
-
-				<span>33</span>
+				<span>21</span>
 
 				<img src="images/original_9a3adda9d191369bf8a7ab1f2bad68dd.jpg">
 
@@ -256,7 +226,7 @@
 
 			<figure>
 
-				<span>34</span>
+				<span>22</span>
 
 				<img src="images/IMG_8348.jpeg">
 
@@ -264,7 +234,7 @@
 
 			<figure>
 
-				<span>35</span>
+				<span>23</span>
 
 				<img src="images/IMG_8435.jpeg">
 
@@ -272,7 +242,17 @@
 
 			<figure>
 
-				<span>37</span>
+				<span>24</span>
+
+				<img src="images/IMG_8454.jpeg">
+
+				<a href="https://www.instagram.com/supremenewyork">source</a>
+
+			</figure>
+
+			<figure>
+
+				<span>25</span>
 
 				<img src="images/IMG_8426.jpeg">
 
@@ -282,7 +262,7 @@
 
 			<figure>
 
-				<span>39</span>
+				<span>26</span>
 
 				<img src="images/IMG_8390.jpeg">
 
@@ -292,7 +272,7 @@
 
 			<figure>
 
-				<span>45</span>
+				<span>27</span>
 
 				<img src="images/Lebanese_Football_Association_(LFA)_logo.png">
 
@@ -300,7 +280,15 @@
 
 			<figure>
 
-				<span>48</span>
+				<span>28</span>
+
+				<img src="images/IMG_7756.png">
+
+			</figure>
+
+			<figure>
+
+				<span>29</span>
 
 				<img src="images/IMG_8730.jpeg">
 
@@ -310,18 +298,10 @@
 
 			<figure>
 
-				<span>49</span>
+				<span>30</span>
 
 				<img src="images/IMG_8364.jpeg">
 
-
-			</figure>
-
-			<figure>
-
-				<span>50</span>
-
-				<img src="images/IMG_8327.JPG">
 
 			</figure>
 
